    initial values are set to the cached values.
 6. Fix entries being removed from 'More' entry.
 7. Add 'Music Folder', 'Random Albums', and 'Random Mix' to 'More' browse
    list.
 8. Add option to show menu when clicking on a audio item.
 9. Add icon for iOS.
10. Update Vue.js and Vuetify.js
11. Sleep timer.
12. Add option to sort favorites.

0.0.6
-----
1. Initial work on SlimBrowse - only used in favorites and radios so far.
2. Dutch, German, and French translations.
3. Group players have no replaygain setting.
4. Show album year in play queue.
5. Don't sort favorites - as the order can be determined in default web UI.
6. Ensure volume is only ever adjusted whilst dialog is shown.
7. Add insert action.

0.0.5
-----
1. When listing browse items, check for title if name is not set. Fixes
   podcast listing.
2. If browse listing only has 1 item with description, then show description
   under item. Mainly for podcasts.
3. Improve how favorites are added.
4. When adding a favorite, check if it already exists.

0.0.4
-----
1. Fix retrieval of language files.
2. Add en-gb translation.
3. Add "id" tag to install.xml file.
4. Fix restoring dark/light status.
5. If asked to scroll to current track, and its not in currently fetched list
   of items - then fetch to current index + 50
6. For app entries that have isuadio=1 and hasitems=1 and there are actually
   child items, then use playall/addall. Fixes playing BandCampout weeklies
   "Listen to songs (without comments)" entries.
7. Fix scrolling to more search results.
8. Dim speaker/group icon of powered off players.
9. Use currently visible page size to calculate when to fetch more items.

0.0.3
-----
1. Fix loading URL items (e.g. Radio stations).
2. When retrieving browse items, if 'isaudio==1' then add audio actions, even if
   'hasitems==1'
3. Fix setting as Default.
4. When browsing apps, do not navigate into an item with 0 entries. YouTube
   app sets 'isaudio==1' and 'hasitems==1' for music URLs.